@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-03-27T00:36:55Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 4,
+  "timestamp" : "2022-03-27T08:08:58Z",
+  "count" : 9,
+  "count_minmax" : [ 0, 9 ],
+  "count_prev_day_inc" : 13,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
