@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-03-27T00:36:55Z",
-  "count_outdated" : 528,
-  "uniques_outdated" : 32,
-  "count" : 657,
-  "uniques" : 40,
+  "timestamp" : "2022-03-27T08:08:58Z",
+  "count_outdated" : 533,
+  "uniques_outdated" : 33,
+  "count" : 666,
+  "uniques" : 41,
   "views" : [
-    {
-      "timestamp": "2022-03-13T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-03-14T00:00:00Z",
       "count": 7,
@@ -58,6 +51,13 @@
       "timestamp": "2022-03-26T00:00:00Z",
       "count": 44,
       "count_minmax": [ 0, 44 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-03-27T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 0, 9 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
