@@ -1,12 +1,7 @@
 {
-  "count": 129,
+  "count": 133,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-03-13T00:00:00Z",
-      "count": 5,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-03-14T00:00:00Z",
       "count": 7,
@@ -40,6 +35,11 @@
     {
       "timestamp": "2022-03-26T00:00:00Z",
       "count": 44,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-03-27T00:00:00Z",
+      "count": 9,
       "uniques": 1
     }
   ]
